--- a/_posts/1-1-1-exp.markdown
+++ b/_posts/1-1-1-exp.markdown
@@ -1,17 +1,15 @@
 ---
 layout: default
-img: 1-1-1-exp.jpg
-category: Experiences
-title: Machine Learning <br>Research Intern
+category: Experience
 description: |
 ---
 
-* Conduct interdisciplinary research in computer science, biology and linguistic using statistic machine learning and deep learning approach with Professor Pengyu Hong at Brandeis University
-
-* Tackle the NP-complete graph matching problem with a graduated assignment implementation
-
-* Optimize automatic graph feature extraction and apply the model in biology domain involving proteins and neurons
-
-* Implement computational linguistic models using word vector, neural network and other statistical tools to match sentences in the same conversational context
-
-* Selected as 16'-17' Jerome A. Schiff Undergraduate Fellows for my innovative [research](http://www.cs.brandeis.edu/~weschin/Schiff-Proposal.pdf) in machine learning and biology
+* Research Intern, Panasonic R&D, Singapore.   
+Deep Learning Framework for Facial Action Unit Recognition   
+January 2016 -- present   
+* PhD Student, Nanyang Technological University, Singapore.
+Modeling the Influence of Personality on Users' Response to Multimedia  
+August 2013 -- present  
+* B.E.(Hons), BITS-Pilani, India   
+Computer Science   
+August 2009 -- May 2013
