--- a/_posts/1-1-1-exp.markdown
+++ b/_posts/1-1-1-exp.markdown
@@ -6,11 +6,11 @@ description: |
 ---
 
 * Research Intern, Panasonic R&D, Singapore.   
-Deep Learning Framework for Facial Action Unit Recognition   
-January 2016 -- present   
-* PhD Student, Nanyang Technological University, Singapore.
-Modeling the Influence of Personality on Users' Response to Multimedia  
-August 2013 -- present  
+    +Deep Learning Framework for Facial Action Unit Recognition   
+    -January 2016 -- present   
+* PhD Student, Nanyang Technological University, Singapore.   
+    +Modeling the Influence of Personality on Users' Response to Multimedia  
+    -August 2013 -- present  
 * B.E.(Hons), BITS-Pilani, India   
-Computer Science   
-August 2009 -- May 2013
+    +Computer Science   
+    -August 2009 -- May 2013
