--- a/_posts/1-1-1-pro.markdown
+++ b/_posts/1-1-1-pro.markdown
@@ -5,13 +5,9 @@ category: Projects
 title: "Kaggle: <br> Restaurant Revenue Prediction"
 description: |
 ---
-* Predict restaurant revenue for TFI, the company behind some of the world's most well-known brands including Burger King and compete with other data scientist on Kaggle. 
++ **Deep Bi-Modal Representations to discriminate User Likes**   
 
+A deep-bimodal representation of images is proposed based on their visual content and associated tags (text), allowing for the transfer of semantic knowledge between the two modalities. Then a model is learnt on a collection of images 'liked' by users (from Flickr), and is shown to better state-of-art by 15-20%. Beyond this test-set performance, an attempt is made to qualitatively understand the representations learned by the deep architecture used to model user `likes'.   
 
-* **Rank top 2% among 2257 teams from all over the world**.
-
-
-* Build [multiple models](https://github.com/WesleyyC/RestaurantRevenuePrediction) using Ensemble, Linear Regression, Support Vector Machine, Regression Tree and Random Forest.
-
-
-* Run feature selection using Boruta and engineer data using techniques involving data imputation and data visualization. 
+[ACCV '14](https://www.dropbox.com/s/cjjxt1cqw7wdqtk/ACCV2014.pdf?dl=1)     
+[TIP preprint](https://www.dropbox.com/s/xdx9p9ngrhayexs/TIP_Submission_R2.pdf?dl=1)  
