--- a/_posts/3-1-1-pro.markdown
+++ b/_posts/3-1-1-pro.markdown
@@ -2,13 +2,13 @@
 layout: default
 img: 13-1-1-pro.png
 category: Projects
-title: Demandware Field Project:<br> The Next Generation Of<br> In-Store Shopping
+title: Modeling Users Personality based on Selfies
 description: |
 ---
-* Work with [Demandware Inc.](http://www.demandware.com/), a software technology company providing a cloud-based e-commerce platform for retailers and brand manufactures, to define and narrow down problems in today's in-store shopping experience in the era of online shopping.
+As another medium of modeling users’ personality, several mid-level cues (such as presence of duck faces, pressed lips etc.) were proposed to be computationally detected on their selfies using traditional visual features (like LBP, BoVW etc). These mid-level cues were then used as predictors to model users’ personality. 
+  * In contrast to a previous psychology finding, where extraversion was related to positive emotional expression, our study showed that it was not significantly correlated to any cue. One reason could be that users, irrespective of their degree of extraversion, tend to show positive emotion in selfies to maintain positive self-impression. 
+  * Agreeableness was negatively correlated with camera height indicating that users with high score on agreeableness tend to take selfies from below. 
+  * Conscientiousness was negatively correlated with private location indicating that conscientious people do not like to expose their private space in the background as corroborated by psychology findings.
+  * Neuroticism positively correlated with duckface and many other insights were found on the selfie taking behaviors and how they can be used to model users’ personality.    
 
-* Research, propose and test solutions and features to enhance in-store shopping experience by bridging internet and physical store
-
-* Develop [two mobile application](https://github.com/BrandeisXDemandware), Android and iOS, to do a proof of concepts on some emerging technologies like beacons (notification and trilateration location), Google Indoor Map, etc
-
-* Write and pitch our project to the team with reports, presentations and [website](http://brandeisxdemandware.github.io/)
+[ACM Multimedia '15 ASM Workshop](https://www.dropbox.com/s/5dm5bqbtss60ios/ACM_MM_ASM_2015.pdf?dl=1)
