--- a/_posts/2-1-1-pro.markdown
+++ b/_posts/2-1-1-pro.markdown
@@ -1,6 +1,6 @@
 ---
 layout: default
-img: 10-1-1-pro.png
+img: 
 category: Projects
 title: Who Likes What, and Why?* Modeling Users Personality based on Image Likes
 description: |
@@ -9,7 +9,7 @@ With the increasing proliferation of data production technologies (e.g. cameras)
 
   * First, a set of semantic features are proposed to be used for representing different concepts in images which influence users to like them. The addition of the proposed features led to improvement over state-of-the-art by 12%.   
   
-  * Second, a novel machine learning approach is developed to model users' personality based on the semantic features extracted from images (resulting in upto 15\% improvement).     
+  * Second, a novel machine learning approach is developed to model users' personality based on the semantic features extracted from images (resulting in upto 15% improvement).     
 
   * Third, efficacy of the semantic features and the modeling approach is shown in a personality modeling based image recommendation application. Using the modeling approach, recommendations are made regarding the factors that might influence users with different personality traits to like an image.    
  
