--- a/_posts/3-1-1-pro.markdown
+++ b/_posts/3-1-1-pro.markdown
@@ -1,6 +1,6 @@
 ---
 layout: default
-img: 13-1-1-pro.png
+img: 
 category: Projects
 title: Modeling Users Personality based on Selfies
 description: |
