--- a/_posts/4-1-1-pro.markdown
+++ b/_posts/4-1-1-pro.markdown
@@ -1,6 +1,6 @@
 ---
 layout: default
-img: 16-1-1-pro.png
+img: 
 category: Projects
 title: Modeling Influence of Personality on Experience of Affect, Perception of Quality and Enjoyment in Multimedia   
 description: |
