--- a/_posts/2-1-1-pro.markdown
+++ b/_posts/2-1-1-pro.markdown
@@ -15,4 +15,7 @@ With the increasing proliferation of data production technologies (e.g. cameras)
  
   * Computational models show that concepts such as scenes, colors, presence of people has a positive influence on users with high scores on Openness trait. Extroverted users liked the images with the opposite sex in them and especially those with groups of people. Neurotic users were seen to like cluttered  and surreal images. 
   
-[TAFFC preprint](https://www.dropbox.com/s/nk1eunrmiqv8t9t/R2.pdf?dl=1)
+Publications:
+  + **S.C.Guntuku**, J. T. Zhou, S. Roy, W. Lin, I. W. Tsang, **_Who Likes What and Why? Insights into Image based Personality Modeling_**, IEEE Transactions on Image Processing, 2016, [PDF preprint] (https://www.dropbox.com/s/z2mpreyq9kspl4p/TAC_SubmissionR4.pdf?dl=1)    
+  + **S. C. Guntuku**, L.Qiu, S. Roy, W. Lin, V. Jakhetiya, **_Do others perceive you as you want them to? Modeling Personality based on Selfies_**, ACM Multimedia ASM Workshop,  2015. [PDF] (https://www.dropbox.com/s/7siychu0r5fbows/ACM_MM_ASM_2015.pdf?dl=1)  
+  + **S.C.Guntuku**, S. Roy, W. Lin,  **_Personality Modeling Based Image Recommendation_**, MultiMedia Modeling, 2015, Oral [PDF] (https://www.dropbox.com/s/291vxt9y4w1mmhh/MMM2015.pdf?dl=1)  
