--- a/_posts/3-1-1-pro.markdown
+++ b/_posts/3-1-1-pro.markdown
@@ -17,4 +17,4 @@ As another medium of modeling users’ personality, several mid-level cues (such
 
 Publication:   
 
-  + **S. C. Guntuku**, L.Qiu, S. Roy, W. Lin, V. Jakhetiya, **_Do others perceive you as you want them to? Modeling Personality based on Selfies_**, ACM Multimedia ASM Workshop,  2015. [PDF](https://www.dropbox.com/s/7siychu0r5fbows/ACM_MM_ASM_2015.pdf?dl=1)  
+  + **S. C. Guntuku**, L.Qiu, S. Roy, W. Lin, V. Jakhetiya, **_Do others perceive you as you want them to? Modeling Personality based on Selfies_**, ACM Multimedia ASM Workshop,  2015. [PDF](https://www.researchgate.net/publication/281232669_Do_Others_Perceive_You_As_You_Want_Them_To_Modeling_Personality_based_on_Selfie)  
