--- a/_posts/4-1-1-pro.markdown
+++ b/_posts/4-1-1-pro.markdown
@@ -19,6 +19,6 @@ Publications:
  
   + M.J.Scott, **S. C. Guntuku**,  Y. Huan, G. Ghinea, W. Lin, **_Modelling Human Factors in Perceptual Multimedia Quality: On The Role of Personality and Culture_**, ACM Multimedia Full paper, 2015 (first and second authors have equal contribution)    
  
-  + **S. C. Guntuku**, M.J.Scott, G. Ghinea, W. Lin **_Modelling the Influence of Personality and Culture on Affect and Enjoyment in Multimedia_**, ACII 2015 [PDF](https://www.dropbox.com/s/cvypuqcezzb7y20/ACII_2015.pdf?dl=1)    
+  + **S. C. Guntuku**, M.J.Scott, G. Ghinea, W. Lin **_Modelling the Influence of Personality and Culture on Affect and Enjoyment in Multimedia_**, ACII 2015 [PDF](https://www.researchgate.net/publication/279196284_Modelling_The_Influence_of_Personality_and_Culture_on_Affect_and_Enjoyment_in_Multimedia)    
  
-  + **S. C. Guntuku**, M.J.Scott, Y. Huan, G. Ghinea, W. Lin, **_The CP-QAE-I: A Video Dataset for Exploring the Effect of Personality and Culture on Perceived Quality and Affect in Multimedia_**, IEEE QoMEX, 2015.[PDF](https://www.dropbox.com/s/o1bkgja2jaeec4u/Qomex2015_cameraready.pdf?dl=1)
+  + **S. C. Guntuku**, M.J.Scott, Y. Huan, G. Ghinea, W. Lin, **_The CP-QAE-I: A Video Dataset for Exploring the Effect of Personality and Culture on Perceived Quality and Affect in Multimedia_**, IEEE QoMEX, 2015.[PDF](https://www.researchgate.net/publication/274732186_The_CP-QAE-I_A_Video_Dataset_for_Exploring_the_Effects_of_Personality_and_Culture_on_Perceived_Quality_and_Affect_in_Multimedia)
