--- a/_posts/2-2-1-exp.markdown
+++ b/_posts/2-2-1-exp.markdown
@@ -4,10 +4,34 @@ category: Experience
 title: Publications
 description: |
 ---
-+ *Convolutional Deep Belief Networks for Scalable Unsupervised Learning of Hierarchical Representations*,   
-   Lee, Honglak, et al. [ICML 2009 paper](http://dl.acm.org/citation.cfm?id=1553453)    
-   [MATLAB Implementation along with Visualisations](https://github.com/sharathchandra92/CDBN)   
 
-+ *Script for downloading users\' photos (tagged as favorite) along with profile information.*    
-   Needs flickr_api   
-   [Python Code](https://github.com/sharathchandra92/flickrapi_downloadfavorites) 
+### Journals
+
+#### 2016
+
+  + **S.C.Guntuku**, J. T. Zhou, S. Roy, W. Lin, I. W. Tsang, **_Who Likes What and Why? Insights into Image based Personality Modeling_**, IEEE Transactions on Affective Computing, 2016, [PDF preprint](https://www.dropbox.com/s/z2mpreyq9kspl4p/TAC_SubmissionR4.pdf?dl=1)    
+  + **S.C.Guntuku**, J. T. Zhou, S. Roy, W. Lin, I. W. Tsang, **_Understanding Deep Representations Learned in Modeling User Likes_**, IEEE Transactions on Image Processing, 2016, [PDF preprint](https://www.researchgate.net/publication/303498119_Understanding_Deep_Representations_Learned_in_Modeling_Users_Likes%27)    
+  + M.J.Scott, **S. C. Guntuku**,  G. Ghinea, W. Lin, **_Do Personality and Culture Influence Perceived Video Quality and Enjoyment?_**, IEEE Transactions on Multimedia, 2016 (first and second authors have equal contribution) [PDF preprint](https://goo.gl/cIivwF)    
+
+#### 2015      
+  + A.K. Gupta, **S.C. Guntuku**, R.K. Desu, A. Balu, **_Optimisation of turning parameters by integrating genetic algorithm with support vector regression and artificial neural networks_** The International Journal of Advanced Manufacturing Technology 77.1-4 (2015): 331-339. [PDF](https://www.researchgate.net/publication/269846116_Optimisation_of_turning_parameters_by_integrating_genetic_algorithm_with_support_vector_regression_and_artificial_neural_networks?ev=prf_pub)      
+
+#### 2014     
+  + R.K. Desu, **S.C. Guntuku**, B. Aditya, A.K. Gupta, **_Support Vector Regression based Flow Stress Prediction in Austenitic Stainless Steel 304_** Procedia Materials Science 6 (2014): 368-375. [PDF](https://www.researchgate.net/publication/265513018_Support_Vector_Regression_based_Flow_Stress_Prediction_in_Austenitic_Stainless_Steel_304)     
+  + K. Singh, **S.C. Guntuku**, A. Thakur, C. Hota, **_Big data analytics framework for peer-to-peer botnet detection using random forests_** Information Sciences 278 (2014): 488-497. (first and second authors have equal contribution) [PDF](https://www.researchgate.net/publication/275431700_Big_Data_Analytics_framework_for_Peer-to-Peer_Botnet_detection_using_Random_Forests)     
+  
+### Conference Papers    
+    
+#### 2016    
+   + **Guntuku, S. C.**, Roy, S., Lin, W., Ng, K., Ng, W.K., Jakhetiya, V., **_Personalizing User Interfaces for improving Quality of Experience in VoD Recommender Systems_**, 2016, Eigth International Conference on Quality of Multimedia Experience (QoMEX) [PDF](https://www.researchgate.net/publication/301337780_Personalizing_User_Interfaces_for_improving_Quality_of_Experience_in_VoD_Recommender_Systems)    
+   
+#### 2015     
+   + **Guntuku, S. C.**, Qiu, L., Roy, S., Lin, W., & Jakhetiya, V., **_Do Others Perceive You As You Want Them To?: Modeling Personality based on Selfies_** In Proceedings of the 1st International Workshop on Affect & Sentiment in Multimedia at ACM MUltimedia 2015, (pp. 21-26). [PDF](https://www.researchgate.net/publication/282273011_Do_Others_Perceive_You_As_You_Want_Them_To_Modeling_Personality_based_on_Selfies)      
+   + Scott, M. J., **Guntuku, S. C.**, Huan, Y., Lin, W., & Ghinea, G., **_Modelling Human Factors in Perceptual Multimedia Quality: On The Role of Personality and Culture_** In Proceedings of the 23rd Annual ACM Conference on Multimedia Conference (pp. 481-490). ACM. [PDF](https://www.researchgate.net/publication/281029867_Modelling_Human_Factors_in_Perceptual_Multimedia_Quality_On_The_Role_of_Personality_and_Culture)      
+   + **Guntuku, S. C.**, Lin, W., Scott, M. J., & Ghinea, G.,  **_Modelling the influence of personality and culture on affect and enjoyment in multimedia_** In Affective Computing and Intelligent Interaction (ACII), 2015 International Conference on (pp. 236-242). IEEE. [PDF](https://www.researchgate.net/publication/279196284_Modelling_The_Influence_of_Personality_and_Culture_on_Affect_and_Enjoyment_in_Multimedia?ev=prf_pub)      
+   + **Guntuku, S. C.**, Roy, S., & Weisi, L., **_Evaluating visual and textual features for predicting user ‘likes’_** In Multimedia and Expo (ICME), 2015 IEEE International Conference on (pp. 1-6). IEEE. [PDF](https://www.researchgate.net/publication/281642949_Evaluating_visual_and_textual_features_for_predicting_user_%27likes%27?ev=prf_pub)     
+   + **Guntuku, S. C.**, Scott, M. J., Yang, H., Ghinea, G., & Lin, W., **_The CP-QAE-I: A video dataset for exploring the effect of personality and culture on perceived quality and affect in multimedia_** In Quality of Multimedia Experience (QoMEX), 2015 Seventh International Workshop on (pp. 1-7). IEEE. [PDF](https://www.researchgate.net/publication/274732186_The_CP-QAE-I_A_Video_Dataset_for_Exploring_the_Effects_of_Personality_and_Culture_on_Perceived_Quality_and_Affect_in_Multimedia)      
+   + **Guntuku, S. C.**, Roy, S., & Weisi, L., **_Personality modeling based image recommendation_** In MultiMedia Modeling (pp. 171-182). Springer International Publishing. [PDF](https://www.researchgate.net/publication/281643019_Personality_Modeling_Based_Image_Recommendation?ev=prf_pub)    
+   
+### 2014     
+   + **Guntuku, S. C.**, Zhou, J. T., Roy, S., Weisi, L., & Tsang, I. W., **_Deep representations to model user ‘likes’_** In Computer Vision--ACCV 2014 (pp. 3-18). Springer International Publishing.      
